--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -167,7 +167,7 @@
         *ngFor="let instance of instanceData.slice(3, instanceData.length)"
       >
         <div class="ic_top">
-          <h4>{{ instance.name }}</h4>
+          <h4 class="fw-semibold fs-4">{{ instance.name }}</h4>
           <div class="ict_right">
             <span
               class="limit_text"
