Changed button text from edit to update.

--- a/src/app/screens/bot-settings/bot-settings.component.html
+++ b/src/app/screens/bot-settings/bot-settings.component.html
@@ -318,7 +318,7 @@
           gap: 4px;
         "
       >
-        <button (click)="updateAirport()">Edit</button>
+        <button (click)="updateAirport()">Update</button>
         <button (click)="cancelEdit()">Cancel</button>
       </div>
     </div>
