Made cursor pointer when hover on buttons

--- a/src/app/screens/bot-settings/bot-settings.component.html
+++ b/src/app/screens/bot-settings/bot-settings.component.html
@@ -352,7 +352,12 @@
           "
         >
           <div
-            style="display: flex; justify-content: center; align-items: center"
+            style="
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              cursor: pointer;
+            "
             (click)="selectAirport(i)"
           >
             <svg
@@ -371,7 +376,12 @@
             </svg>
           </div>
           <div
-            style="display: flex; justify-content: center; align-items: center"
+            style="
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              cursor: pointer;
+            "
             (click)="deleteAirport(i)"
           >
             <svg
