--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -141,7 +141,7 @@
                 {{ instance.value.length }} / {{ instance.limit }} characters
               </span>
               <button
-                *ngIf="!currentMessageList[i].isEditable"
+                *ngIf="!instanceData[i].isEditable"
                 class="edit btn btn-primary btn-sm"
                 (click)="toggleEdit(i)"
               >
@@ -152,9 +152,15 @@
           <textarea
             class="form-control"
             placeholder="Type here..."
-            [readonly]="!instance.isEditable"
+            disabled="!instanceData[i].isEditable"
             [(ngModel)]="currentMessageList[i]"
           ></textarea>
+          <!-- <textarea
+            class="form-control"
+            placeholder="Type here..."
+            *ngIf="instance.isEditable"
+            [(ngModel)]="currentMessageList[i]"
+          ></textarea> -->
           <button class="btn btn-success mt-2" *ngIf="instance.isEditable">
             Update
           </button>
