Made new sidebar.

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,191 +4,202 @@
       <img src="../../../assets/logo.png" alt="" />
       <h1>Taxi Messages</h1>
     </div>
-    <ul class="menu">
-      <a [routerLink]="'/'">
-        <li
-          (click)="setCurrentItem('Home')"
-          [class.active]="currentItem === 'Home'"
-          class="menu_item"
-        >
-          <img src="../../../assets/homeicon.png" />
+    <div class="menu">
+      <ul class="sidebar-borders menu">
+        <a [routerLink]="'/'">
+          <li
+            (click)="setCurrentItem('Home')"
+            [class.active]="currentItem === 'Home'"
+            class="menu_item"
+          >
+            <img src="../../../assets/homeicon.png" />
+            <img src="../../../assets/homeiconw.png" />
 
-          <span>Home</span>
-        </li>
-      </a>
-      <a [routerLink]="'/messages'">
-        <li
-          (click)="setCurrentItem('Messages')"
-          [class.active]="currentItem === 'Messages'"
-          class="menu_item"
-        >
-          <img src="../../../assets/msgicon.png" />
-          <span>Messages</span>
-        </li>
-      </a>
-      <a [routerLink]="'/block-list'">
-        <li
-          (click)="setCurrentItem('Blocked')"
-          [class.active]="currentItem === 'Blocked'"
-          class="menu_item"
-        >
-          <img src="../../../assets/blockicon.png" />
+            <span>Home</span>
+          </li>
+        </a>
+        <a [routerLink]="'/messages'">
+          <li
+            (click)="setCurrentItem('Messages')"
+            [class.active]="currentItem === 'Messages'"
+            class="menu_item"
+          >
+            <img src="../../../assets/msgicon.png" />
+            <img src="../../../assets/msgiconw.png" />
+            <span>Messages</span>
+          </li>
+        </a>
+        <a [routerLink]="'/block-list'">
+          <li
+            (click)="setCurrentItem('Blocked')"
+            [class.active]="currentItem === 'Blocked'"
+            class="menu_item"
+          >
+            <img src="../../../assets/blockicon.png" />
+            <img src="../../../assets/blockiconw.png" />
 
-          <span>Blocked List</span>
-        </li>
-      </a>
-      <a [routerLink]="'/devices'">
-        <li
-          (click)="setCurrentItem('Devices')"
-          [class.active]="currentItem === 'Devices'"
-          class="menu_item"
+            <span>Blocked List</span>
+          </li>
+        </a>
+        <a [routerLink]="'/devices'">
+          <li
+            (click)="setCurrentItem('Devices')"
+            [class.active]="currentItem === 'Devices'"
+            class="menu_item"
+          >
+            <img src="../../../assets/deviceicon.png" />
+            <img src="../../../assets/deviceiconw.png" />
+            <span>Devices</span>
+          </li>
+        </a>
+        <a
+          [routerLink]="'/chatbot/analytics'"
+          (click)="setCurrentSubItem('Analytics')"
         >
-          <img src="../../../assets/deviceicon.png" />
-          <span>Devices</span>
-        </li>
-      </a>
-      <a
-        [routerLink]="'/chatbot/analytics'"
-        (click)="setCurrentSubItem('Analytics')"
-      >
-        <li
-          (click)="setCurrentItem('Chatbots')"
-          [class.active]="currentItem === 'Chatbots'"
-          class="menu_item"
-        >
-          <img
-            src="../../../assets/icons/chatbots.png"
-            style="height: 30px; width: 30px; object-fit: contain"
-          />
-          <span>Chatbots</span>
-        </li>
-      </a>
-      <ul *ngIf="currentItem === 'Chatbots'" class="sub_menu">
-        <a [routerLink]="'/chatbot/analytics'">
           <li
-            (click)="setCurrentSubItem('Analytics')"
-            [class.active]="currentSubItem === 'Analytics'"
-            class="sub_menu_item"
+            (click)="setCurrentItem('Chatbots')"
+            [class.active]="currentItem === 'Chatbots'"
+            class="menu_item"
           >
-            <img
-              src="../../../assets/icons/analytics.svg"
-              style="height: 30px; width: 30px; object-fit: contain"
-            />
-            <span>Analytics</span>
+            <img src="../../../assets/chatboticon.png" />
+            <img src="../../../assets/chatboticonw.png" />
+            <span>Chatbots</span>
           </li>
         </a>
-        <a [routerLink]="'/chatbot/chat-flow'">
+
+        <ul *ngIf="currentItem === 'Chatbots'" class="sub_menu">
+          <a [routerLink]="'/chatbot/analytics'">
+            <li
+              (click)="setCurrentSubItem('Analytics')"
+              [class.active]="currentSubItem === 'Analytics'"
+              class="sub_menu_item"
+            >
+              <img
+                src="../../../assets/icons/analytics.svg"
+                style="height: 30px; width: 30px; object-fit: contain"
+              />
+              <span>Analytics</span>
+            </li>
+          </a>
+          <a [routerLink]="'/chatbot/chat-flow'">
+            <li
+              (click)="setCurrentSubItem('Chat')"
+              [class.active]="currentSubItem === 'Chat'"
+              class="sub_menu_item"
+            >
+              <img
+                src="../../../assets/icons/chat-flow.png"
+                style="height: 30px; width: 30px; object-fit: contain"
+              />
+              <span>Chat Flow</span>
+            </li>
+          </a>
+          <a [routerLink]="'/chatbot/bookings'">
+            <li
+              (click)="setCurrentSubItem('Bookings')"
+              [class.active]="currentSubItem === 'Bookings'"
+              class="sub_menu_item"
+            >
+              <img
+                src="../../../assets/icons/bookings.svg"
+                style="height: 30px; width: 30px; object-fit: contain"
+              />
+              <span>Bookings</span>
+            </li>
+          </a>
+          <a [routerLink]="'/chatbot/customers'">
+            <li
+              (click)="setCurrentSubItem('Customers')"
+              [class.active]="currentSubItem === 'Customers'"
+              class="sub_menu_item"
+            >
+              <img
+                src="../../../assets/icons/customers.png"
+                style="height: 30px; width: 30px; object-fit: contain"
+              />
+              <span>Customers</span>
+            </li>
+          </a>
+          <a [routerLink]="'/chatbot/bot-settings'">
+            <li
+              (click)="setCurrentSubItem('Bot Settings')"
+              [class.active]="currentSubItem === 'Bot Settings'"
+              class="sub_menu_item"
+            >
+              <img
+                src="../../../assets/icons/bot-settings.svg"
+                style="height: 30px; width: 30px; object-fit: contain"
+              />
+              <span>Bot Settings</span>
+            </li>
+          </a>
+        </ul>
+
+        <a [routerLink]="'/broadcast-sms'" (click)="setCurrentSubItem('SMS')">
           <li
-            (click)="setCurrentSubItem('Chat')"
-            [class.active]="currentSubItem === 'Chat'"
-            class="sub_menu_item"
+            (click)="setCurrentItem('Broadcast')"
+            [class.active]="currentItem === 'Broadcast'"
+            class="menu_item"
           >
-            <img
-              src="../../../assets/icons/chat-flow.png"
-              style="height: 30px; width: 30px; object-fit: contain"
-            />
-            <span>Chat Flow</span>
+            <img src="../../../assets/broadcasticon.png" />
+            <img src="../../../assets/broadcasticonw.png" />
+            <span>Broadcast</span>
           </li>
         </a>
-        <a [routerLink]="'/chatbot/bookings'">
+        <ul *ngIf="currentItem === 'Broadcast'" class="sub_menu">
+          <a [routerLink]="'/broadcast-sms'">
+            <li
+              (click)="setCurrentSubItem('SMS')"
+              [class.active]="currentSubItem === 'SMS'"
+              class="sub_menu_item"
+            >
+              <img
+                src="../../../assets/icons/broadcast-sms.svg"
+                style="height: 30px; width: 30px; object-fit: contain"
+              />
+              <span>SMS</span>
+            </li>
+          </a>
+          <a [routerLink]="'/broadcast-whatsapp'">
+            <li
+              (click)="setCurrentSubItem('WhatsApp')"
+              [class.active]="currentSubItem === 'WhatsApp'"
+              class="sub_menu_item"
+            >
+              <img
+                src="../../../assets/icons/broadcast-w.svg"
+                style="height: 30px; width: 30px; object-fit: contain"
+              />
+              <span>WhatsApp</span>
+            </li>
+          </a>
+        </ul>
+      </ul>
+      <ul class="sidebar-borders menu">
+        <a [routerLink]="'/app-settings'">
           <li
-            (click)="setCurrentSubItem('Bookings')"
-            [class.active]="currentSubItem === 'Bookings'"
-            class="sub_menu_item"
+            (click)="setCurrentItem('App')"
+            [class.active]="currentItem === 'App'"
+            class="menu_item"
           >
-            <img
-              src="../../../assets/icons/bookings.svg"
-              style="height: 30px; width: 30px; object-fit: contain"
-            />
-            <span>Bookings</span>
+            <img src="../../../assets/settingicon.png" />
+            <img src="../../../assets/settingiconw.png" />
+            <span>App Settings</span>
           </li>
         </a>
-        <a [routerLink]="'/chatbot/customers'">
+        <a [routerLink]="'/profile'">
           <li
-            (click)="setCurrentSubItem('Customers')"
-            [class.active]="currentSubItem === 'Customers'"
-            class="sub_menu_item"
+            (click)="setCurrentItem('Profile')"
+            [class.active]="currentItem === 'Profile'"
+            class="menu_item"
           >
-            <img
-              src="../../../assets/icons/customers.png"
-              style="height: 30px; width: 30px; object-fit: contain"
-            />
-            <span>Customers</span>
-          </li>
-        </a>
-        <a [routerLink]="'/chatbot/bot-settings'">
-          <li
-            (click)="setCurrentSubItem('Bot Settings')"
-            [class.active]="currentSubItem === 'Bot Settings'"
-            class="sub_menu_item"
-          >
-            <img
-              src="../../../assets/icons/bot-settings.svg"
-              style="height: 30px; width: 30px; object-fit: contain"
-            />
-            <span>Bot Settings</span>
+            <img src="../../../assets/profileicon.png" />
+            <img src="../../../assets/profileiconw.png" />
+            <span>Profile</span>
           </li>
         </a>
       </ul>
-      <a [routerLink]="'/broadcast-sms'" (click)="setCurrentSubItem('SMS')">
-        <li
-          (click)="setCurrentItem('Broadcast')"
-          [class.active]="currentItem === 'Broadcast'"
-          class="menu_item"
-        >
-          <img src="../../../assets/broadcasticon.png" />
-          <span>Broadcast</span>
-        </li>
-      </a>
-      <ul *ngIf="currentItem === 'Broadcast'" class="sub_menu">
-        <a [routerLink]="'/broadcast-sms'">
-          <li
-            (click)="setCurrentSubItem('SMS')"
-            [class.active]="currentSubItem === 'SMS'"
-            class="sub_menu_item"
-          >
-            <img
-              src="../../../assets/icons/broadcast-sms.svg"
-              style="height: 30px; width: 30px; object-fit: contain"
-            />
-            <span>SMS</span>
-          </li>
-        </a>
-        <a [routerLink]="'/broadcast-whatsapp'">
-          <li
-            (click)="setCurrentSubItem('WhatsApp')"
-            [class.active]="currentSubItem === 'WhatsApp'"
-            class="sub_menu_item"
-          >
-            <img
-              src="../../../assets/icons/broadcast-w.svg"
-              style="height: 30px; width: 30px; object-fit: contain"
-            />
-            <span>WhatsApp</span>
-          </li>
-        </a>
-      </ul>
-      <a [routerLink]="'/app-settings'">
-        <li
-          (click)="setCurrentItem('App')"
-          [class.active]="currentItem === 'App'"
-          class="menu_item"
-        >
-          <img src="../../../assets/settingicon.png" />
-          <span>App Settings</span>
-        </li>
-      </a>
-      <a [routerLink]="'/profile'">
-        <li
-          (click)="setCurrentItem('Profile')"
-          [class.active]="currentItem === 'Profile'"
-          class="menu_item"
-        >
-          <img src="../../../assets/profileicon.png" />
-          <span>Profile</span>
-        </li>
-      </a>
-    </ul>
+    </div>
 
     <!-- <div class="pro">
             <img src="../../../assets/img/pro.png" alt="">
