--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -4,23 +4,42 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     background-color: #fff;
     z-index: 100;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .sidebar {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    padding: 2rem;
+    gap: 10px;
     height: 100vh;
     position: relative;
     width: 320px;
     transition: all 250ms;
 }
 
+.sidebar img {
+    width: 28px;
+}
+
+.sidebar img:nth-child(2) {
+    display: none;
+}
+
+.menu_item.active img:nth-child(2) {
+    display: flex;
+}
+
+.sidebar img:nth-child(1) {
+    display: flex;
+}
+
+.menu_item.active img:nth-child(1) {
+    display: none;
+}
+
 .sidebar.toggled {
-    width: 50px !important;
-    padding-left: 6rem !important;
+    width: 80px !important;
+    /* padding-left: 6rem !important; */
     align-items: center;
 }
 
@@ -29,6 +48,8 @@
     align-items: center;
     gap: .5rem;
     width: 100px !important;
+    padding-left: 2rem;
+    padding-top: 2rem;
 }
 
 .logo img {
@@ -48,12 +69,24 @@
     display: none;
 }
 
+.sidebar.toggled .logo {
+    margin: auto;
+}
+
+.sidebar.toggled .menu {
+    width: 60px !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px 0;
+}
+
 .menu {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin-top: 1rem;
     overflow-y: auto;
+    padding: 15px;
 }
 
 .menu_item {
@@ -89,6 +122,18 @@ a {
 
 .sidebar.toggled .menu_item span {
     display: none;
+}
+
+.sidebar.toggled a {
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+}
+
+.sidebar.toggled li {
+    width: fit-content !important;
+    padding: 0 10px;
+    /* padding: auto; */
 }
 
 .menu_item.active {
@@ -218,4 +263,22 @@ a {
     .sidebar.toggled {
         width: 60px;
     }
+}
+
+.sidebar-borders {
+    border: 1px solid lightgray;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.116);
+    border-radius: 15px;
+    padding: 15px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+
+.menu.sidebar-borders {
+    overflow: visible;
+}
+
+.sidebar.toggled .sub_menu a {
+    aspect-ratio: 1;
 }
