--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -152,7 +152,7 @@
           <textarea
             class="form-control"
             placeholder="Type here..."
-            disabled="!instanceData[i].isEditable"
+            [disabled]="!instanceData[i].isEditable"
             [(ngModel)]="currentMessageList[i]"
           ></textarea>
           <!-- <textarea
