Working on messages page.

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -12,8 +12,10 @@
             [class.active]="currentItem === 'Home'"
             class="menu_item"
           >
-            <img src="../../../assets/homeicon.png" />
-            <img src="../../../assets/homeiconw.png" />
+            <div>
+              <img src="../../../assets/homeicon.png" />
+              <img src="../../../assets/homeiconw.png" />
+            </div>
 
             <span>Home</span>
           </li>
@@ -24,8 +26,10 @@
             [class.active]="currentItem === 'Messages'"
             class="menu_item"
           >
-            <img src="../../../assets/msgicon.png" />
-            <img src="../../../assets/msgiconw.png" />
+            <div>
+              <img src="../../../assets/msgicon.png" />
+              <img src="../../../assets/msgiconw.png" />
+            </div>
             <span>Messages</span>
           </li>
         </a>
@@ -35,8 +39,10 @@
             [class.active]="currentItem === 'Blocked'"
             class="menu_item"
           >
-            <img src="../../../assets/blockicon.png" />
-            <img src="../../../assets/blockiconw.png" />
+            <div>
+              <img src="../../../assets/blockicon.png" />
+              <img src="../../../assets/blockiconw.png" />
+            </div>
 
             <span>Blocked List</span>
           </li>
@@ -47,8 +53,10 @@
             [class.active]="currentItem === 'Devices'"
             class="menu_item"
           >
-            <img src="../../../assets/deviceicon.png" />
-            <img src="../../../assets/deviceiconw.png" />
+            <div>
+              <img src="../../../assets/deviceicon.png" />
+              <img src="../../../assets/deviceiconw.png" />
+            </div>
             <span>Devices</span>
           </li>
         </a>
@@ -61,8 +69,10 @@
             [class.active]="currentItem === 'Chatbots'"
             class="menu_item"
           >
-            <img src="../../../assets/chatboticon.png" />
-            <img src="../../../assets/chatboticonw.png" />
+            <div>
+              <img src="../../../assets/chatboticon.png" />
+              <img src="../../../assets/chatboticonw.png" />
+            </div>
             <span>Chatbots</span>
           </li>
         </a>
@@ -141,8 +151,10 @@
             [class.active]="currentItem === 'Broadcast'"
             class="menu_item"
           >
-            <img src="../../../assets/broadcasticon.png" />
-            <img src="../../../assets/broadcasticonw.png" />
+            <div>
+              <img src="../../../assets/broadcasticon.png" />
+              <img src="../../../assets/broadcasticonw.png" />
+            </div>
             <span>Broadcast</span>
           </li>
         </a>
@@ -182,8 +194,10 @@
             [class.active]="currentItem === 'App'"
             class="menu_item"
           >
-            <img src="../../../assets/settingicon.png" />
-            <img src="../../../assets/settingiconw.png" />
+            <div>
+              <img src="../../../assets/settingicon.png" />
+              <img src="../../../assets/settingiconw.png" />
+            </div>
             <span>App Settings</span>
           </li>
         </a>
@@ -193,8 +207,10 @@
             [class.active]="currentItem === 'Profile'"
             class="menu_item"
           >
-            <img src="../../../assets/profileicon.png" />
-            <img src="../../../assets/profileiconw.png" />
+            <div>
+              <img src="../../../assets/profileicon.png" />
+              <img src="../../../assets/profileiconw.png" />
+            </div>
             <span>Profile</span>
           </li>
         </a>
