--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,9 +1,9 @@
 .sidebar-wrapper {
     position: sticky;
     top: 0;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     background-color: #fff;
     z-index: 100;
+    border-right: 1px solid lightgray;
     /* overflow: hidden; */
 }
 
@@ -13,12 +13,19 @@
     gap: 10px;
     height: 100vh;
     position: relative;
-    width: 320px;
+    width: 160px;
     transition: all 250ms;
+    width: 220px !important;
+}
+
+.sidebar li div {
+    width: 32px;
+    display: flex;
+    justify-content: center;
 }
 
 .sidebar img {
-    width: 28px;
+    height: 20px;
 }
 
 .sidebar img:nth-child(2) {
@@ -70,7 +77,7 @@
 }
 
 .sidebar.toggled .logo {
-    margin: auto;
+    margin: 0 auto;
 }
 
 .sidebar.toggled .menu {
@@ -237,7 +244,7 @@ a {
 
 .toggle {
     position: absolute;
-    top: 100px;
+    top: 43px;
     left: 100%;
     transform: translateX(-50%);
     border: none;
@@ -266,8 +273,7 @@ a {
 }
 
 .sidebar-borders {
-    border: 1px solid lightgray;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.116);
+    box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.20);
     border-radius: 15px;
     padding: 15px auto;
     display: flex;
@@ -277,6 +283,7 @@ a {
 
 .menu.sidebar-borders {
     overflow: visible;
+    width: 180px;
 }
 
 .sidebar.toggled .sub_menu a {
