Extra button removed from bot setting page.

--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -112,9 +112,9 @@
         Messages For WhatsApp
       </h1>
     </div>
-    <div class="instance_grid d-flex">
+    <div class="msg-boxes-container">
       <div
-        class="instance_card col-md-4 d-flex flex-column"
+        class="msg-box"
         *ngFor="
           let instance of currentMessageList.slice(
             0,
