--- a/src/app/screens/messages/messages.component.css
+++ b/src/app/screens/messages/messages.component.css
@@ -253,3 +253,24 @@
     font-weight: light;
     border: none;
 }
+
+.msg-boxes-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 10px;
+}
+
+.msg-box {
+    box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.20);
+    border-radius: 20px;
+    padding: 0 10px;
+    width: 250px;
+}
+
+.msg-box textarea {
+    background: none;
+    border: none;
+    height: 100px;
+    resize: none;
+}
